# synthizer

./: .gitignore  Cargo.toml  README.md  expr.synt  index.html  params.json
examples/: def.synt  expr.synt  factorial.synt  fibbonacci.synt  hello.synt  nonsense.synt  saw.synt  square.synt
src/: main.rs
src/cli/: main.rs
src/interpreter/: ast.rs  codegen.rs  common.rs  compiler.rs  expr.rs  function.rs  functioncall.rs  functiondef.rs  functions.rs  ident.rs  identifier.rs  issue.rs  lexer.rs  lib.rs  mod.rs  parser.rs  parseutil.rs  scope.rs  sum.rs  symbol.rs  synth.rs  synthizer.lalrpop  test_grammar.rs  tests.rs  tokens.rs  typecheck.rs  types.rs  util.rs
src/interpreter/audio/: filewriter.rs  mod.rs  stream.rs
src/interpreter/parse/: mod.rs  synthizer.lalrpop  test_parse.rs
test/: abs.test  const.test  default_args.test  mk_tests.py  nested_block.test  nested_bracket.test  newlines_everywhere.test  test_base  two_defs.test  two_same_defs.test  unmatched_paren.test  useless_paren.test
tests/: codegen.rs  lexer.rs  parser.rs  typecheck.rs
