[package]

name = "synthizer"
version = "0.0.1"
authors = ["Noah Weninger"]

[dependencies]
rustc-serialize = "*"
regex = "*"
regex_macros = "*"
cbox = "*"
bit-set = "*"
sound_stream = "*"
hound = "*"
vec_map = "*"

[dependencies.docopt]
git = "https://github.com/docopt/docopt.rs"
[dependencies.docopt_macros]
git = "https://github.com/docopt/docopt.rs"

[dependencies.llvm-alt]
path = "../llvm-rs"

[lib]
name = "interpreter"
path = "src/interpreter/lib.rs"

[[bin]]
name = "synthizer"
path = "src/cli/main.rs"
