[package]

name = "synthizer"
version = "0.0.1"
authors = ["Noah Weninger"]
#build = "build.rs"

#[build-dependencies]
#lalrpop = "0.5.0"

[dependencies]
#lalrpop-util = "0.5.0"
rustc-serialize = "*"
regex = "*"
regex_macros = "*"
cbox = "*"
bit-set = "*"
sound_stream = "*"
hound = "*"
vec_map = "*"
docopt = "*"
docopt_macros = "*"
llvm-sys = "*"

[dependencies.llvm-alt]
path = "../llvm-rs"

[lib]
name = "interpreter"
path = "src/interpreter/lib.rs"

[[bin]]
name = "synthizer"
path = "src/cli/main.rs"
